# searXNG

./: CITATION.cff  README.md  pyproject.toml
docs/: index.md
examples/: demo.tape  demo.webm
searxng/: __init__.py  __main__.py  client.py  server.py
